--- a/.github/workflows/skrturbo.yml
+++ b/.github/workflows/skrturbo.yml
@@ -39,11 +39,11 @@ jobs:
           github.event_name == 'pull_request' && '["bugfix-2.1.x", "2.1.2"]' ||
           '["2.1.2"]') }}
         machine:
-        - V1CNC_SkrTurbo_8825
-        - V1CNC_SkrTurbo_DualLR_8825
-        - V1CNC_SkrTurbo_Dual_8825
-        - V1CNC_SkrTurbo_2209
-        - V1CNC_SkrTurbo_Dual_2209
+        # - V1CNC_SkrTurbo_8825
+        # - V1CNC_SkrTurbo_DualLR_8825
+        # - V1CNC_SkrTurbo_Dual_8825
+        # - V1CNC_SkrTurbo_2209
+        # - V1CNC_SkrTurbo_Dual_2209
         - V1CNC_SkrTurbo_DualLR_2209
 
     steps:
